--- a/drivers/staging/qcacld-2.0/Kbuild
+++ b/drivers/staging/qcacld-2.0/Kbuild
@@ -1053,7 +1053,14 @@ ifeq ($(CONFIG_REMOVE_PKT_LOG), 0)
 OBJS +=		$(PKTLOG_OBJS)
 endif
 
-EXTRA_CFLAGS += $(INCS)
+ifneq ($(cc-name),clang)
+EXTRA_CFLAGS += $(INCS) -Os
+endif
+
+ifeq ($(cc-name),clang)
+EXTRA_CFLAGS += $(INCS) -Oz
+endif
+
 
 EXTRA_CFLAGS += -Wno-unused-function -Wno-unused-variable
 
@@ -1912,7 +1919,17 @@ EXTRA_CFLAGS += -Wno-typedef-redefinition
 EXTRA_CFLAGS += -Wno-shift-count-overflow
 EXTRA_CFLAGS += -Wno-non-literal-null-conversion
 EXTRA_CFLAGS += -Wno-logical-not-parentheses
+EXTRA_CFLAGS += -Wno-unused-function
+EXTRA_CFLAGS += -Wno-unused-variable
 endif 
+
+ifneq ($(cc-name),clang)
+EXTRA_CFLAGS += -Wno-unused-function
+EXTRA_CFLAGS += -Wno-unused-variable
+EXTRA_CFLAGS += -Wno-maybe-uninitialized
+EXTRA_CFLAGS += -Wno-switch-unreachable
+EXTRA_CFLAGS += -Wno-misleading-indentation
+endif
 
 # If the module name is not "wlan", then the define MULTI_IF_NAME to be the
 # same a the QCA CHIP name. The host driver will then append MULTI_IF_NAME to
