--- a/drivers/staging/qcacld-2.0/Kbuild
+++ b/drivers/staging/qcacld-2.0/Kbuild
@@ -175,6 +175,7 @@ ifeq ($(CONFIG_ARCH_QCS405), y)
 	CONFIG_TXRX_PERF := y
 	CONFIG_NON_QC_PLATFORM := n
 	CONFIG_CUSTOMIZE_SDIO_CCCR_VALUE := y
+	CONFIG_MULTI_IF_LOG := y
 endif
 
 #Enable Power debugfs feature only if debug_fs is enabled
@@ -1056,6 +1057,8 @@ endif
 
 EXTRA_CFLAGS += $(INCS)
 
+EXTRA_CFLAGS += -Wno-unused-function -Wno-unused-variable
+
 CDEFINES :=	-DANI_LITTLE_BYTE_ENDIAN \
 		-DANI_LITTLE_BIT_ENDIAN \
 		-DQC_WLAN_CHIPSET_QCA_CLD \
@@ -1874,14 +1877,6 @@ CDEFINES += -DFEATURE_DYNAMIC_POWER_CONTROL
 endif
 
 KBUILD_CPPFLAGS += $(CDEFINES)
-
-# Currently, for versions of gcc which support it, the kernel Makefile
-# is disabling the maybe-uninitialized warning.  Re-enable it for the
-# WLAN driver.  Note that we must use EXTRA_CFLAGS here so that it
-# will override the kernel settings.
-ifeq ($(call cc-option-yn, -Wmaybe-uninitialized),y)
-EXTRA_CFLAGS += -Wmaybe-uninitialized
-endif
 
 ifeq ($(call cc-option-yn, -Wheader-guard),y)
 EXTRA_CFLAGS += -Wheader-guard
